# mmlib

./: Cargo.toml  readme.md
mmcli/: Cargo.toml
mmcli/src/: main.rs
mmlib/: Cargo.toml  readme.md
mmlib/src/: lib.rs
mmlib/src/formats/: mod.rs
mmlib/src/formats/bmp/: mod.rs
